--- a/Portfolio2.0/index.html
+++ b/Portfolio2.0/index.html
@@ -67,8 +67,8 @@
     <section class="more-about">
       <h2>More About Me</h2>
       <p>
-        Taylor Philpott is a backend developer with experience in game development, database, Razor, C++, C#
-          C, assembly, and Unity to name of few. Taylor takes a learning approach to design and development - one in which 
+        Taylor Philpott is a game and backend developer with experience in game design process and launch cycles, Razor, C++, C#
+          C, and Unity. Taylor takes a learning approach to design and development - one in which 
           values the process and efficiency.
       </p>
       <p>
